Extension Unit Tests

--- a/ImageProcessingLibrary.Test/ImageProcessingLibrary.Test.csproj
+++ b/ImageProcessingLibrary.Test/ImageProcessingLibrary.Test.csproj
@@ -13,5 +13,18 @@
         <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     </ItemGroup>
-
+    <ItemGroup>
+        <None Update="Szreki\*.png">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+        <None Update="Szreki\*.jpg">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+        <None Update="Szreki\*.bmp">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\ImageProcessingLibrary\ImageProcessingLibrary.csproj" />
+    </ItemGroup>
 </Project>
