--- a/ImageProcessing.MVVM/ImageProcessing.MVVM.csproj
+++ b/ImageProcessing.MVVM/ImageProcessing.MVVM.csproj
@@ -11,4 +11,8 @@
       <PackageReference Include="JetBrains.Annotations" Version="2020.3.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ImageProcessingLibrary\ImageProcessingLibrary.csproj" />
+    </ItemGroup>
+
 </Project>
