--- a/ImageProcessingLibrary.Test/ImageProcessingLibrary.Test.csproj
+++ b/ImageProcessingLibrary.Test/ImageProcessingLibrary.Test.csproj
@@ -25,6 +25,6 @@
         </None>
     </ItemGroup>
     <ItemGroup>
-      <ProjectReference Include="..\ImageProcessingLibrary\ImageProcessingLibrary.csproj" />
+      <ProjectReference Include="..\ImageProcessing.Library\ImageProcessing.Library.csproj" />
     </ItemGroup>
 </Project>
