--- a/src/ImageProcessing.WPF/ImageProcessing.WPF.csproj
+++ b/src/ImageProcessing.WPF/ImageProcessing.WPF.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
-        <TargetFramework>net5.0-windows</TargetFramework>
+        <TargetFrameworks>netcoreapp3.1;net5.0-windows</TargetFrameworks>
         <UseWPF>true</UseWPF>
         <Nullable>enable</Nullable>
     </PropertyGroup>
