--- a/test/ImageProcessing.Library.Test/ImageProcessing.Library.Test.csproj
+++ b/test/ImageProcessing.Library.Test/ImageProcessing.Library.Test.csproj
@@ -13,18 +13,10 @@
         <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     </ItemGroup>
+  
     <ItemGroup>
-        <None Update="Szreki\*.png">
-            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-        </None>
-        <None Update="Szreki\*.jpg">
-            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-        </None>
-        <None Update="Szreki\*.bmp">
-            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-        </None>
-    </ItemGroup>
-    <ItemGroup>
+      <ProjectReference Include="..\..\src\ImageProcessing.Library\ImageProcessing.Library.csproj" />
+      <ProjectReference Include="..\..\src\ImageProcessing.WPF\ImageProcessing.WPF.csproj" />
       <ProjectReference Include="..\ImageProcessing.Library\ImageProcessing.Library.csproj" />
     </ItemGroup>
 </Project>
